<?xml version="1.0" encoding="utf-8"?><!--
/*
 * Copyright (C) 2010 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<resources>

    <string name="hello">Hello, Android using native audio!</string>
    <string name="hello_short">Hello</string>
    <string name="android">Android</string>
    <string name="sawtooth">Sawtooth</string>
    <string name="embedded_soundtrack">Embedded\nsoundtrack</string>
    <string name="reverb">Reverb</string>
    <string name="mute_uri">Mute</string>
    <string name="enable_stereo_position_uri">Enable SP</string>
    <string name="uri_spinner">URI spinner</string>
    <string name="uri_soundtrack">URI\nsoundtrack</string>
    <string name="pause_uri">Pause\nURI</string>
    <string name="play_uri">Play\nURI</string>
    <string name="loop_uri">Loop\nURI</string>
    <string name="mute_left_uri">mute left</string>
    <string name="mute_right_uri">mute right</string>
    <string name="solo_left_uri">solo left</string>
    <string name="solo_right_uri">solo right</string>
    <string name="channels_uri">Get channels</string>
    <string name="volume_uri">Volume</string>
    <string name="pan_uri">Pan</string>
    <string name="record">Record</string>
    <string name="playback">Playback</string>
    <string name="app_name">NativeAudio</string>
    
    <string-array name="uri_spinner_array">
        <item>http://upload.wikimedia.org/wikipedia/commons/6/6d/Banana.ogg</item>
        <item>http://www.freesound.org/data/previews/18/18765_18799-lq.mp3</item>
    </string-array>

</resources>
