<?xml version="1.0" encoding="utf-8"?>

<!--
/*
 * Copyright (C) 2010 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="?attr/textAppearanceListItemSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/hello" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/hello"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/hello_short" />

            <Button
                android:id="@+id/android"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/android" />

            <Button
                android:id="@+id/sawtooth"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/sawtooth" />

            <Button
                android:id="@+id/embedded_soundtrack"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/embedded_soundtrack" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reverb"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/reverb" />

            <Button
                android:id="@+id/mute_uri"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/mute_uri" />

            <Button
                android:id="@+id/enable_stereo_position_uri"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/enable_stereo_position_uri" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/uri_spinner"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/uri_spinner" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/uri_soundtrack"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/uri_soundtrack" />

            <Button
                android:id="@+id/pause_uri"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/pause_uri" />

            <Button
                android:id="@+id/play_uri"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/play_uri" />

            <Button
                android:id="@+id/loop_uri"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/loop_uri" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mute_left_uri"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:text="@string/mute_left_uri" />

            <Button
                android:id="@+id/mute_right_uri"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:text="@string/mute_right_uri" />

            <Button
                android:id="@+id/solo_left_uri"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:text="@string/solo_left_uri" />

            <Button
                android:id="@+id/solo_right_uri"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/solo_right_uri" />
        </LinearLayout>

        <Button
            android:id="@+id/channels_uri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/channels_uri" />

        <SeekBar
            android:id="@+id/volume_uri"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/volume_uri" />

        <SeekBar
            android:id="@+id/pan_uri"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/pan_uri" />

        <Button
            android:id="@+id/record"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/record" />

        <Button
            android:id="@+id/playback"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/playback" />

    </LinearLayout>

</ScrollView>